# assignment-1-single-core-matrix-multiplication-BinYahmoor

./: README.md
Exercise 1/: Lab1_TiledMatmul_CPU.cpp  out
Exercise 7/: CMakeLists.txt  lab7_matmul.cpp
Exercise 7/kernels/compute/: matmul_tiles.cpp
Exercise 7/kernels/dataflow/: read_matmul_tiles.cpp  write_matmul_tiles.cpp
Terminal commands exercise 2-6/: Exercise 4.txt  Exercise 5 Teerminal B.txt  Exercise 5 terminal A.txt  exercise 2.txt  exercise 3.txt  exercise 6.txt
